--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,30 @@
-/* Add any styling to your website here (fonts, colors, spacing, etc.) */
+* {
+    box-sizing: border-box; 
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+  }
 
-h3 {
-    color: purple;
-}
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 16px;
+    color: #606c71;
+  }
+
+  .page-header {
+    color: #fff;
+    text-align: center;
+    background-color: #32a852;
+    background-image: linear-gradient(120deg, #95cca4, #32a852);
+  }
+
+  .page-name {
+      color: #fff;
+      text-align: center;
+      font-size: 50px;
+      padding: 5px;
+  }
