--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -18,6 +18,7 @@
                 <li><a href="{{  url_for('index') }}">Home</a></li>
                 <li><a href="{{  url_for('all_dogs') }}">Dogs</a></li>
                 <li><a href="{{  url_for('random_dog') }}">Random Dog</a></li>
+                <li><a href="{{url_for('random_dogPlace')}}> Button</a></li>
             </ul>
         </div>
     </nav>
