--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -28,3 +28,19 @@
       font-size: 50px;
       padding: 5px;
   }
+
+  body {background-color: rgb(25, 133, 161);}
+        .button {
+            border: 2px solid rgb(76, 92, 105);
+            color: rgb(0, 0, 0);
+            padding: 16px 32px;
+            text-align: middle;
+            text-decoration: none;
+            background-color:rgb(76, 92, 105);
+            display: inline-block;
+            font-size: 20px;
+            margin: 4px 2px;
+            transition-duration: 0.4s;
+            cursor: pointer;}
+
+         
