--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,19 @@
 
 {% block content %}
 
-    <h1>Home</h1>
-    <h3>This is a really great animal shelter!</h3>
+<h2> 
+    <body>
+        <button class="button button1">Log In Here!</button>
+        <button onclick="login.html"></button>
+
+    </body>
+    </h2>
+    <p> 
+        <style>
+           
+        </style>
+        <text> We are here to allow you to be able to find your basic needs. Everything with this website is free to you. </text>
+    
+    </p>
 
 {% endblock %}
