added crockpot and microwave photos

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -16,8 +16,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="{{  url_for('index') }}">Home</a></li>
-                <li><a href="{{  url_for('all_dogs') }}">Listings</a></li>
-                <li><a href="{{  url_for('random_dog') }}">Random Dog</a></li>
+                <li><a href="{{  url_for('all_listings') }}">Listings</a></li>
             </ul>
         </div>
     </nav>
