--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 
     <h1>Home</h1>
-    <h3>This is a really great animal shelter!</h3>
+    <h3>Welcome to Housewarming!</h3>
 
 {% endblock %}
