--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,10 @@
 
 <h2> 
     <body>
-        <button class="button button1">Log In Here!</button>
-        <button onclick="login.html"></button>
 
+
+        <button onclick="window.location.href='login.html'">Log in here!</button>
+        
     </body>
     </h2>
     <p> 
