Updated some files

--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Site Login</title>
-        <link rel="stylesheet" type="text/css" href="./style.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="./normalize.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="./login.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="./static/styles/style.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="./static/styles/normalize.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="./static/styles/login.css" media="screen">
     </head>
 
     <Body>
