--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -12,11 +12,12 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{{  url_for('index') }}">Flask Animal Shelter</a>
+                <a class="navbar-brand" href="{{  url_for('index') }}">Homewarming</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="{{  url_for('index') }}">Home</a></li>
-                <li><a href="{{  url_for('all_listings') }}">Listings</a></li>
+                <li><a href="{{  url_for('listings') }}">Listings</a></li>
+                <li><a href="{{  url_for('login') }}">Login</a></li>
             </ul>
         </div>
     </nav>
