Fixed build bugs and link bugs, listings now show in order

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <body>
 
 
-        <button onclick="window.location.href='login.html'">Log in here!</button>
+        <button onclick='window.location.href="/loginpage"'>Log in here!</button>
         
     </body>
     </h2>
