--- a/templates/listings.html
+++ b/templates/listings.html
@@ -7,7 +7,7 @@
     <hr/>
 
     <!-- Display Listings Info -->
-    {% for item in listings %}
+    {% for item in items %}
         <img height=300 src="{{ url_for('static', filename='/media/' + item.photo_name) }}"
              alt="Image of item named {{ item.name }}">
         <h3>{{ item.name }}</h3>
@@ -20,18 +20,22 @@
     <h2>Add a Listing</h2>
 
     <form action="{{ url_for('create_listing') }}" method="POST">
+
         <div class="form-group">
             <label for="item_name">Item:</label>
             <input type="text" class="form-control" name="item_name">
         </div>
+
         <div class="form-group">
             <label for="condition">Condition:</label>
             <input type="text" class="form-control" name="condition">
         </div>
+
         <div class="form-group">
             <label for="description">Description:</label>
             <input type="text" class="form-control" name="description">
         </div>
+        
         <input type="submit" class="btn btn-default">
     </form>
 
