--- a/templates/login.html
+++ b/templates/login.html
@@ -8,15 +8,34 @@
         <link rel="stylesheet" type="text/css" href="./static/styles/style.css" media="screen">
         <link rel="stylesheet" type="text/css" href="./static/styles/normalize.css" media="screen">
         <link rel="stylesheet" type="text/css" href="./static/styles/login.css" media="screen">
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
     </head>
 
     <Body>
-        <section>
-            <h1 class="page-name">Welcome to our Technica 2020 Hack.</h1>
+        <!-- Navigation Bar -->
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{{  url_for('index') }}">Homewarming</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li><a href="{{  url_for('index') }}">Home</a></li>
+                <li><a href="{{  url_for('login') }}">Login</a></li>
+                <li><a href="{{  url_for('all_listings') }}">Listings</a></li>
+            
+            </ul>
+        </div>
+    </nav>
+
+        <!-- <section>
+            <h1 class="page-name">Welcome to Homewarming.</h1>
+            <h2  class="page-subheader"><a href="/home">Return to Home</a></h2>
             <h2 class="page-subheader">Log in as an exisiting user or create a new account.</h2>
-        </section>
+        </section> -->
+
 
         <section class="main-content">
+            <h1 class="page-name" style="color: white; background: rgb(25, 150, 161);">Welcome to Homewarming.</h1>
 
             <div class="left-div">
                 <br><br/>
