--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -7,6 +7,13 @@
     background: transparent;
   }
 
+  html {
+    color: #fff;
+    text-align: center;
+    background-color: #1985A1;
+    background-image: linear-gradient(100deg, #4c5c68, #1985A1);
+}
+
   body {
     padding: 0;
     margin: 0;
