--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Flask Animal Shelter | Sample Code</title>
+        <title>Housewarming</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="{{ url_for('static', filename='/styles/style.css') }}" rel="stylesheet">
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{{  url_for('index') }}">Homewarming</a>
+                <a class="navbar-brand" href="{{  url_for('index') }}">Housewarming</a>
             </div>
             <ul class="nav navbar-nav">
                 <li><a href="{{  url_for('index') }}">Home</a></li>
